--- a/index.html
+++ b/index.html
@@ -76,6 +76,32 @@
             <!-- If we need scrollbar -->
             <div class="swiper-scrollbar"></div>
         </div>
+
+        <div class="card">
+            <!--Linha 1-->
+            <div class="card-descricao">
+                <!--Coluna 1-->
+                <div class="descricao">
+                    <h3 class="descricao-titulo">Talvez você também se interesse por...</h3>
+                    <h2 class="descricao-titulo-livro">Angular 11 e Firebase</h2>
+                    <p>Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <!--Coluna 2-->
+                <img src="imagens/Perfil-escritora 2.svg" alt="">
+            </div>
+            <!--Linha 2-->
+            <div class="card-botao">
+                <!--Coluna 1-->
+                <ul class="botoes">
+                    <li class="card-botao-item"><a href="#"><img src="imagens/favoritos.svg" alt="favoritos"></a></li>
+                    <li class="card-botao-item"><a href="#"><img src="imagens/Sacola.svg" alt="Carinho de compras"></a></li>
+                </ul>
+                <!--Coluna 2-->
+                <a href="#" class="btn-ancora">Saiba mais</a>
+
+            </div>
+
+        </div>
     </section>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
