Finalizado a responsividade para mobile

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <p>Construindo uma aplicação integrada com a plataforma do Google.</p>
                 </div>
                 <!--Coluna 2-->
-                <img src="imagens/Perfil-escritora 2.svg" alt="">
+                <img src="imagens/Perfil-escritora 2.svg" alt="" style="margin-right: 10px;">
             </div>
             <!--Linha 2-->
             <div class="card-botao">
@@ -103,6 +103,31 @@
 
         </div>
     </section>
+    <section class="topicos">
+        <h2 class="topicos-titulo">Tópicos visitados recentemente</h2>
+        <ul class="topicos-lista">
+            <li class="topicos-items"><a href="#" class="topicos-link">Android</a></li>
+            <li class="topicos-items"><a href="#" class="topicos-link">Marketing Digital</a></li>
+            <li class="topicos-items"><a href="#" class="topicos-link">Agile</a></li>
+            <li class="topicos-items"><a href="#" class="topicos-link">Startup</a></li>
+            <li class="topicos-items"><a href="#" class="topicos-link">HTML E CSS</a></li>
+            <li class="topicos-items"><a href="#" class="topicos-link">Python</a></li>
+            <li class="topicos-items"><a href="#" class="topicos-link">OO</a></li>
+            <li class="topicos-items"><a href="#" class="topicos-link">Java</a></li>
+        </ul>
+    </section>
+    <section class="contato">
+        <h2>Fique por dentro das novidades!</h2>
+        <p>Atuqlizações de ebooks, novos livros, promoções e outros.</p>
+        <input type="email" placeholder="Cadastre o seu email">
+        
+    </section>
+    
+    <footer class="rodape">
+        <hr/>
+        <h2>Grupo Alura</h2>
+    </footer>
+
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
